# insly-openapi-mcp-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  start.sh  test_connection.py  test_swagger2.py
awslabs/openapi_mcp_server/: server.py
awslabs/openapi_mcp_server/api/: config.py
awslabs/openapi_mcp_server/utils/: openapi.py  openapi_validator.py  swagger_converter.py
insly/: __init__.py
insly/openapi_mcp_server/: __init__.py  multi_transport.py  server.py
insly/openapi_mcp_server/api/: __init__.py  config.py
insly/openapi_mcp_server/auth/: __init__.py  api_key_auth.py  auth_cache.py  auth_errors.py  auth_factory.py  auth_protocol.py  auth_provider.py  base_auth.py  basic_auth.py  bearer_auth.py  cognito_auth.py  register.py
insly/openapi_mcp_server/patch/: __init__.py
insly/openapi_mcp_server/prompts/: __init__.py  models.py  prompt_manager.py
insly/openapi_mcp_server/prompts/generators/: __init__.py  operation_prompts.py  workflow_prompts.py
insly/openapi_mcp_server/utils/: __init__.py  cache_provider.py  config.py  description_enhancer.py  dynamic_auth_client.py  error_handler.py  http_client.py  metrics_provider.py  openapi.py  openapi_validator.py  swagger_converter.py  tool_naming.py
tests/prompts/: test_prompt_naming.py
tests/utils/: test_tool_naming.py
