[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "insly-openapi-mcp-server"
version = "1.0.1"
description = "insly.ai OpenAPI MCP Server - A production-ready Model Context Protocol server for OpenAPI specifications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
license-files = ["LICENSE"]
authors = [
    {name = "insly.ai", email="support@insly.ai"},
    {name = "Ando Kivilaid", email="ando@insly.ai"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.24.1",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "boto3>=1.28.0",
    "cachetools>=5.3.0",
    "loguru>=0.7.0",
    "uvicorn>=0.23.0",
    "tenacity>=8.2.0",
    "prance>=23.6.21.0",
    "pyyaml>=6.0.0",
    "openapi-spec-validator>=0.6.0",
    "bcrypt>=4.0.0",
]


[project.optional-dependencies]
yaml = ["pyyaml>=6.0.0"]
prometheus = ["prometheus-client>=0.17.0"]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
dev = [
    "commitizen>=4.4.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.398",
    "ruff>=0.11.2",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "lxml>=4.9.0",
]
all = ["pyyaml>=6.0.0", "prometheus-client>=0.17.0"]

[project.urls]
Homepage = "https://insly.ai"
Documentation = "https://github.com/kivilaid/insly-openapi-mcp-server"
Source = "https://github.com/kivilaid/insly-openapi-mcp-server"
"Bug Tracker" = "https://github.com/kivilaid/insly-openapi-mcp-server/issues"
Changelog = "https://github.com/kivilaid/insly-openapi-mcp-server/blob/main/CHANGELOG.md"

[project.scripts]
"insly-openapi-mcp-server" = "insly.openapi_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["insly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["awslabs"]
omit = ["tests/*", "**/__init__.py"]
# Handle line shifts caused by license headers
skip_covered = false
skip_empty = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    # License header patterns - regex patterns to handle line shifts
    "^\\s*#\\s*Copyright",
    "^\\s*#\\s*Licensed under",
    "^\\s*#\\s*limitations under the License",
    "^\\s*#\\s*Copyright Amazon\\.com",
    "^\\s*#\\s*Licensed under the Apache License",
    "^\\s*#\\s*WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND",
    "^\\s*#\\s*See the License for the specific language governing permissions",
    "^\\s*#\\s*and limitations under the License",
    "^\\s*#\\s*$",
    "^\\s*#\\s*http://www\\.apache\\.org/licenses/LICENSE-2\\.0",
    "^\\s*#\\s*Unless required by applicable law",
    "^\\s*#\\s*distributed under the License is distributed",
    "^\\s*#\\s*either express or implied",
    "\"\"\".*\"\"\"",
]
# Skip empty lines to reduce line shift impact
skip_covered = false
skip_empty = true

[tool.coverage.html]
skip_empty = true

[tool.coverage.xml]
skip_empty = true

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".venv",
    "**/__pycache__",
    "**/node_modules",
    "**/dist",
    "**/build",
    "**/env",
    "**/.ruff_cache",
    "**/.venv",
    "**/.ipynb_checkpoints"
]
force-exclude = true

[tool.ruff.lint]
exclude = ["__init__.py"]
select = ["C", "D", "E", "F", "I", "W"]
ignore = ["C901", "E501", "E741", "F402", "F823", "D100", "D106"]

[tool.ruff.lint.isort]
lines-after-imports = 2
no-sections = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
